<resources>
    <string name="app_name">RosPivPatent</string>
    <string name="searchText">Что вы ищете?</string>
    <string name="fastSearch">Быстрый поиск</string>
    <string name="URL">https://searchplatform.rospatent.gov.ru/patsearch/v0.2/search</string>
    <string name="URL2">https://searchplatform.rospatent.gov.ru/patsearch/v0.2/docs/</string>
    <string name="SECURITY_API_KEY">193692a8f81a4d9286964658a811141c</string>
    <string name="SimpleSearch">простой поиск</string>
    <string name="DocumentNumber">Номер документа</string>
    <string name="PublicationDateFrom">дата публикации от</string>
    <string name="author">автор</string>
    <string name="CopyrightHolder">правооблодатель</string>
    <string name="applicant">заявитель</string>
    <string name="SearchArrays">поисковые массивы</string>
    <string name="PublicationDateBefore">дата публикации до</string>
    <string name="AdvancedSearch">Расширеный поиск</string>
    <string name="searchFields">поисковые поля</string>
    <string name="PublicationDateAdvancedSearch">DP дата публикации</string>
    <string name="AdvancedSearchAuthor">IN</string>
    <string name="AdvancedSearchTitle">TI</string>
    <string name="AdvancedSearchDocumentNumber">PN</string>
    <string name="AdvancedSearchСountry">PO</string>
    <string name="AdvancedSearchMPK">IC</string>
    <string name="AdvancedSearcAnd">AND</string>
    <string name="AdvancedSearcOr">OR</string>
    <string name="AdvancedSearcNot">NOT</string>
    <string name="AdvancedSearcTo">TO</string>
    <string name="AdvancedSearcAdj">ADJ</string>
    <string name="AdvancedSearСequals">=</string>
    <string name="AdvancedSearcLess"><![CDATA[<]]></string>
    <string name="AdvancedSearcMore">></string>
    <string name="AdvancedSearcLessOrСequals"><![CDATA[<=]]></string>
    <string name="AdvancedSearcMoreOrСequals">>=</string>
    <string name="LeftParenthesis">(</string>
    <string name="RightBracket">)</string>
    <string name="LeftSquareBracket">[</string>
    <string name="RightSquareBracket">]</string>
    <string name="leftCurlyBrace">{</string>
    <string name="КightСurlyBrace">}</string>
    <string name="star">*</string>
    <string name="colon">:</string>
    <string name="BETWEEN">BETWEEN</string>
    <string name="Quotes">""</string>
    <string name="Tilde">~</string>

</resources>