<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SimpleSearchActivity"
    android:background="@drawable/main_bg">

    <TextView
        android:id="@+id/textViewSimple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="56dp"
        android:text="@string/SimpleSearch"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editChooseSimple"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/line_inp"
        android:hint="@string/searchText"
        android:maxLength="30"
        android:maxLines="1"
        android:paddingLeft="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/btnLoupSimple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSimple" />

    <ImageButton
        android:id="@+id/btnLoupSimple"
        android:layout_width="39dp"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="106dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="341dp"
        android:background="@null"
        android:src="@drawable/loup"
        app:layout_constraintBottom_toTopOf="@+id/editText6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editChooseSimple"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/DocumentNumber"
        android:layout_width="127dp"
        android:layout_height="23dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/DocumentNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editChooseSimple" />

    <EditText
        android:id="@+id/DocumentNumberEditText"
        android:layout_width="340dp"
        android:layout_height="35dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="4dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/line_my"
        android:maxLength="30"
        android:maxLines="1"
        android:paddingLeft="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DocumentNumber" />

    <TextView
        android:id="@+id/PublicationDateFromTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/PublicationDateFrom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DocumentNumberEditText" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="5dp"
        android:paddingLeft="20sp"
        android:background="@drawable/line_my"
        app:layout_constraintEnd_toEndOf="@+id/PublicationDateFromTextView"
        app:layout_constraintStart_toStartOf="@+id/PublicationDateFromTextView"
        app:layout_constraintTop_toBottomOf="@+id/PublicationDateFromTextView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/PublicationDateBefore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DocumentNumberEditText" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="125dp"
        android:layout_height="24dp"
        android:layout_marginTop="4dp"
        android:paddingLeft="20sp"
        android:background="@drawable/line_my"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"

        android:layout_marginTop="20dp"
        android:text="@string/author"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="340dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="20sp"
        android:background="@drawable/line_my"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/CopyrightHolder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="340dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:paddingLeft="20sp"
        android:background="@drawable/line_my"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/applicant"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />

    <EditText
        android:id="@+id/editText7"
        android:layout_width="340dp"
        android:layout_height="35dp"
        android:paddingLeft="20sp"
        android:layout_marginTop="20dp"
        android:background="@drawable/line_my"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/SearchArrays"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText7" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="340dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />
</androidx.constraintlayout.widget.ConstraintLayout>